<resources>
    <string name="app_name">CatalogApp</string>

    <string name="title_activity_item">Item</string>
    <string name="action_delete">Delete item</string>
    <string name="action_report">Report item</string>
    <string name="action_add_item">Add item</string>
    <string name="action_add_category">Add category</string>
    <string name="action_share_app">Share app</string>
    <string name="action_about">About</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="add_item_header">Add item</string>
    <string name="done_button">Done</string>
    <string name="error_required_field">This field is required!</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="hint_category_name">Category name</string>
    <string name="hint_category_description">Category description</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_category_header">Add category</string>
    <string name="title_activity_about">About</string>
    <string name="author_name">Ilya Mozerov</string>
    <string name="year">(2015)</string>
    <string name="title_activity_image_view">ImageViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
