<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.imozerov.catalogapp.ui.AddCategoryActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context="com.imozerov.catalogapp.ui.AddItemActivity">

        <TextView
            style="@style/activity_header"
            android:id="@+id/activity_add_category_header"
            android:text="@string/add_item_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/activity_add_category_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/abc_ic_commit_search_api_mtrl_alpha"
            android:layout_below="@+id/activity_add_category_header"/>

        <EditText
            android:id="@+id/activity_add_category_name"
            android:hint="@string/hint_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/activity_add_category_image" />

        <Button
            android:id="@+id/activity_add_category_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_add_category_name"
            android:layout_centerHorizontal="true"
            android:text="@string/done_button" />

    </RelativeLayout>

</RelativeLayout>
